<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_placeholder"
            android:title="@string/nav_title_home"/>
    <item
            android:id="@+id/nav_my_occurrences"
            android:icon="@drawable/ic_my_occurrences"
            android:title="@string/nav_title_my_occurrences"/>
    <item
            android:id="@+id/nav_indicators"
            android:icon="@drawable/ic_indicators_placeholder"
            android:title="@string/nav_title_indicators"/>
    <item
            android:id="@+id/nav_public_map"
            android:icon="@drawable/ic_map_placeholder"
            android:title="@string/nav_title_public_map"/>
    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_avatar_placeholder"
            android:title="@string/nav_title_profile"/>
</menu>
